# geometrikks

./: .env.example  .gitignore  README.md  TODOS.md  app.py  components.json  dev-requirements.txt  docker-compose.dev.yml  index.html  openapi-ts.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.css  tsconfig.json  vite.config.ts
geometrikks/api/: dependencies.py
geometrikks/api/v1/: access_log_controller.py  access_log_debug_controller.py  analytics_controller.py  geo_events_controller.py  geo_locations_controller.py  settings.py  stats.py
geometrikks/config/: __init__.py  settings.py
geometrikks/db/: models.py
geometrikks/domain/: __init__.py
geometrikks/domain/analytics/: dtos.py  models.py  repositories.py  service.py
geometrikks/domain/geo/: dtos.py  models.py  repositories.py  utils.py
geometrikks/domain/logs/: dtos.py  models.py  repositories.py
geometrikks/logparser/: dataclasses.py  logparser.py
geometrikks/server/: core.py  lifecycle.py  plugins.py  routes.py  scheduler.py
geometrikks/services/: __init__.py
geometrikks/services/aggregation/: service.py
geometrikks/services/ingestion/: __init__.py  service.py
geometrikks/services/logparser/: __init__.py  constants.py  dataclasses.py  logparser.py  schemas.py
public/: manifest.json
resources/: App.css  main.tsx
resources/components/: app-sidebar.tsx
resources/lib/: api.ts  queries.ts  time-range-context.tsx
resources/routes/: __root.tsx  index.tsx  map.tsx
tests/: conftest.py  test_config.py  test_logparser.py
(+14 files in other folders)
